<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_demo">

    <fragment
        android:id="@+id/navigation_demo"
        android:name="com.cstasenko.mixclouddiscover.view.DemoFragment"
        android:label="@string/title_demo"
        tools:layout="@layout/fragment_demo" />

    <fragment
        android:id="@+id/navigation_discover"
        android:name="com.cstasenko.mixclouddiscover.view.DiscoverFragment"
        android:label="@string/title_discover"
        tools:layout="@layout/fragment_discover" />

    <fragment
        android:id="@+id/navigation_user_shows"
        android:name="com.cstasenko.mixclouddiscover.view.UserShowsFragment"
        android:label="@string/title_users"
        tools:layout="@layout/fragment_user_shows" />
</navigation>