<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DiscoverFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/instructions_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/search_directive_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/search_text_layout"
        android:layout_width="@dimen/view_size_match_constraints"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/instructions_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/primary_margin"
            android:layout_marginEnd="@dimen/primary_margin"
            android:inputType="text"
            android:maxLines="1"
            android:cursorVisible="true"
            android:gravity="center"
            android:imeOptions="actionDone"
            android:hint="@string/search_hint_text_disco" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/button_text_search"
        android:textColor="@color/white"
        android:background="@drawable/button_primary_selector"
        android:layout_marginTop="@dimen/search_button_top_margin"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@+id/search_text_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.cstasenko.mixclouddiscover.view.CarouselPagerView
        android:id="@+id/carousel_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.cstasenko.mixclouddiscover.view.ProgressBarWidget
        android:id="@+id/progress_bar"
        android:layout_width="@dimen/view_size_match_constraints"
        android:layout_height="@dimen/view_size_match_constraints"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>